Content added, on-hover scenarios worked, slightly improvements

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 			</div>
 			<div class="links">
 				<ul>
-					<li><a href="#">work</a></li>
-					<li><a href="#">NEWS </a></li>
-					<li><a href="#">bio</a></li>
-					<li><a href="#">contact</a></li>
+					<li><a href="#portfolio">work</a></li>
+					<li><a href="#news">NEWS </a></li>
+					<li><a href="#bio">bio</a></li>
+					<li><a href="#contact">contact</a></li>
 				</ul>
 				<div class="social-links">
 					<div><a href="#"><i class="fab fa-linkedin"></i></a></div>
@@ -44,24 +44,204 @@
 				<span>Glamour  fashion  personal  street  portrait</span>
 			</div>
 			<div class="works-grid-container">
-				<div class="work-piece row1 col2 n1"><img src="images/placeholder2.jpg" alt=""></div>
-				<div class="work-piece row1 col2 n2"><img src="images/placeholder2.jpg" alt=""></div>
-				<div class="work-piece col2 n3"><img src="images/placeholder2.jpg" alt=""></div>
-				<div class="work-piece row2 col2 n4"><img src="images/placeholder2.jpg" alt=""></div>
-				<div class="work-piece row3 n5"><img src="images/placeholder1.jpg" alt=""></div>
-				<div class="work-piece row3 n6"><img src="images/placeholder1.jpg" alt=""></div>
-				<div class="work-piece row3 n7"><img src="images/placeholder1.jpg" alt=""></div>
-				<div class="work-piece row3 n8"><img src="images/placeholder1.jpg" alt=""></div>
-				<div class="work-piece row4 n9"><img src="images/9.jpg" alt=""></div>
-				<div class="work-piece row4 n10"><img src="images/10.jpg" alt=""></div>
-				<div class="work-piece row4 n11"><img src="images/11.jpg" alt=""></div>
-				<div class="work-piece row4 n12"><img src="images/12.jpg" alt=""></div>
-				<div class="work-piece col2 row5 n13"><img src="images/13.jpg" alt=""></div>
-				<div class="work-piece row5 n14"><img src="images/14.jpg" alt=""></div>
-				<div class="work-piece row5 n15"><img src="images/15.jpg" alt=""></div>
-				<div class="work-piece row6" id = "n16"><img src="images/16.jpg" alt=""></div>
-				<div class="work-piece row6 n17"><img src="images/17.jpg" alt=""></div>
-				<div class="work-piece col2 row6 n18"><img src="images/18.jpg" alt=""></div>
+				<div class="work-piece row1 col2 n1" style = "background-image: url(images/portfolio/1.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row1 col2 n2" style = "background-image: url(images/portfolio/2.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece col2 n3" style = "background-image: url(images/portfolio/3.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row2 col2 n4" style = "background-image: url(images/portfolio/4.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row3 n5" style = "background-image: url(images/portfolio/5.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row3 n6" style = "background-image: url(images/portfolio/6.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row3 n7" style = "background-image: url(images/portfolio/7.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row3 n8" style = "background-image: url(images/portfolio/8.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row4 n9" style = "background-image: url(images/portfolio/9.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row4 n10" style = "background-image: url(images/portfolio/10.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row4 n11" style = "background-image: url(images/portfolio/11.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row4 n12" style = "background-image: url(images/portfolio/12.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece col2 row5 n13" style = "background-image: url(images/portfolio/13.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row5 n14" style = "background-image: url(images/portfolio/14.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row5 n15" style = "background-image: url(images/portfolio/15.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row6" id = "n16" style = "background-image: url(images/portfolio/16.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece row6 n17" style = "background-image: url(images/portfolio/17.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
+				<div class="work-piece col2 row6 n18" style = "background-image: url(images/portfolio/18.jpeg)">
+					<div class="on-hover">
+						<div class="middle-content"><i class="fas fa-search"></i></div>
+						<div class="down-content">
+							<i class="far fa-images"></i>
+							<i class="fas fa-link"></i>
+							<i class="fas fa-info-circle"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</div>
 				
 			</div>
 		</div>
@@ -85,7 +265,7 @@
 					</div>
 					<div class="article-content">
 						<h4>Duis dapibus aliquam mi, eget euismod sem scelerisque ut.</h4>
-						<img src="images/placeholder.png" alt="placeholder">
+						<div class = "news-photo" style = "background-image: url(images/news/photo.jpeg)"></div>
 						<p>
 							Nunc nec massa et risus iaculis interdum et sed mi. Nam 	viverra 
 							ac neque eu aliquet. Maecenas posuere, neque non vestibulum 
@@ -112,7 +292,7 @@
 					<div class="blog">
 						<h4><span>from the</span> BLOG</h4>
 						<div class="blogpost">
-							<img src="images/placeholder-sm.png" alt="placeholder">
+							<div class="blogpost-photo" style = "background-image: url(images/news/blog-images/1.jpg)"></div>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit.Morbi blandit velit id dolor fermentum, non 
 								posuere libero posuere.
@@ -120,7 +300,7 @@
 							<span>26 Aug, 2013</span>
 						</div>
 						<div class="blogpost">
-							<img src="images/placeholder-sm.png" alt="placeholder">
+							<div class="blogpost-photo" style = "background-image: url(images/news/blog-images/2.jpg)"></div>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit.Morbi blandit velit id dolor fermentum, non 
 								posuere libero posuere.
@@ -142,7 +322,7 @@
 			<img src="images/partner4.png" alt="prolight">
 		</div>
 	</section>
-	<section class="bio">
+	<section class="bio" id = "bio">
 		<div class="wrapper">
 			<h2>BIO /</h2>
 			<div class="flex-container">
