--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>.Folio</title>
+
+	<!--    Favicon      -->
+
+	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="images/favicon/site.webmanifest">
+	<link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="shortcut icon" href="images/favicon/favicon.ico">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-config" content="images/favicon/browserconfig.xml">
+	<meta name="theme-color" content="#65ba99">
+
+	<!--    /Favicon      -->
+
 	<link rel="stylesheet" href="styles/normalize.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
@@ -29,10 +44,10 @@
 					<li><a href="#contact">contact</a></li>
 				</ul>
 				<div class="social-links">
-					<div><a href="#"><i class="fab fa-linkedin"></i></a></div>
-					<div><a href="#"><i class="fab fa-facebook-f"></i></a></div>
-					<div><a href="#"><i class="fab fa-flickr"></i></a></div>
-					<div><a href="#"><i class="fab fa-twitter"></i></a></div>
+					<a href="#"><div><i class="fab fa-linkedin"></i></div></a>
+					<a href="#"><div><i class="fab fa-facebook-f"></i></div></a>
+					<a href="#"><div><i class="fab fa-flickr"></i></div></a>
+					<a href="#"><div><i class="fab fa-twitter"></i></div></a>
 				</div>
 			</div>
 		</div>	
@@ -332,10 +347,10 @@
 						<img src="images/avatar.png" alt="avatar">
 					</div>
 					<div class="social-links">
-						<div><a href="#"><i class="fab fa-linkedin"></i></a></div>
-						<div><a href="#"><i class="fab fa-facebook-f"></i></a></div>
-						<div><a href="#"><i class="fab fa-flickr"></i></a></div>
-						<div><a href="#"><i class="fab fa-twitter"></i></a></div>
+						<a href="#"><div><i class="fab fa-linkedin"></i></div></a>
+						<a href="#"><div><i class="fab fa-facebook-f"></i></div></a>
+						<a href="#"><div><i class="fab fa-flickr"></i></div></a>
+						<a href="#"><div><i class="fab fa-twitter"></i></div></a>
 					</div>
 				</div>
 				<div class="right">
@@ -361,9 +376,7 @@
 					</p>	
 					</div>
 				</div>
-			</div>
-		</div>
-		
+			</div>	
 	</section>
 	<section id="contact">
 		<div class="wrapper">
