Preloader || Code Cleaned

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 	<link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+
+	<!--    PRELOADER      -->
+	
+	<div class="preloader" id = "preloader">
+		<div class="loader"></div>
+	</div>
+
+	<!--    MAIN-HEADER      -->
+
 	<header class = "main-header">
 		<div class="wrapper">
 			<h1>.FOLIO<br>ONE PAGE<br>PSD THEME <span>Simple, clear, minimal portfolio template</span></h1>
@@ -59,6 +68,9 @@
 			</button>
 		</div>	
 	</nav>
+
+	<!--    PORTFOLIO-SECTION      -->
+
 	<section id="portfolio">
 		<div class="wrapper">
 			<div class="header">
@@ -340,6 +352,9 @@
 			</div>
 		</div>
 	</section>
+
+	<!--    QUOTE-SECTION      -->
+
 	<section class="quote">
 		<div class="wrapper">
 			<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
@@ -401,12 +416,14 @@
 							</p>
 							<span>26 Aug, 2013</span>
 						</div>
-						
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
+		<!--    PARTNERS-SECTION      -->
+
 	<section class="partners">
 		<div class="wrapper">
 			<img src="images/partner1.png" alt="canon">
@@ -415,6 +432,9 @@
 			<img src="images/partner4.png" alt="prolight">
 		</div>
 	</section>
+
+			<!--    BIO-SECTION      -->
+
 	<section class="bio" id = "bio">
 		<div class="wrapper">
 			<h2>BIO /</h2>
@@ -456,6 +476,9 @@
 				</div>
 			</div>	
 	</section>
+
+			<!--    CONTACT-SECTION      -->
+
 	<section id="contact">
 		<div class="wrapper">
 			<h2>CONTACT /</h2>
@@ -467,7 +490,6 @@
 			</footer>
 		</div>
 	</section>
-
 
 
 <!-- // Jquery -->
